plain-k8s/blue-green/deployment-blue.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blue-app
  labels:
    app: blue-app
spec:
  replicas: 4
  strategy: 
    rollingUpdate:
      maxSurge: 50%
      maxUnavailable: 25%
    type: RollingUpdate
  selector:
    matchLabels:
      app: blue-app
  template:
    metadata:
      labels:
        app: blue-app
    spec:
      containers:
        - name: blue-app
          image: argoproj/rollouts-demo:blue
          lifecycle:
            preStop:
              exec:
                command: ["/bin/bash", "-c", "sleep 10"]
          readinessProbe: 
            httpGet:
              path: /color
              port: http
            timeoutSeconds: 5
            periodSeconds: 30
          imagePullPolicy: Always
          ports:
          - name: http
            containerPort: 8080
          resources:
            limits:
              cpu: 250m
              memory: 256Mi
            requests:
              cpu: 100m
              memory: 128Mi
---

apiVersion: v1
kind: Service
metadata:
  name: blue-app
  labels:
     app: blue-app
spec:
  ports:
  - port: 8080
    targetPort: http
    name: http
  selector:
    app: blue-app
