plain-k8s/blue-green/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: blue-green-app
spec:
  ingressClassName: nginx
  rules:
   - host: localhost
     http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
           name: blue-app
           port: 
             name: http
